# monio

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.journal/: 2026-02-05.md
examples/: basic.rs  channel_async.rs  channel_sync.rs  display.rs  drag_detection.rs  grab.rs  mouse_position.rs  recorder.rs  simulate.rs  statistics.rs  tui_key_displayer.rs
src/: channel.rs  display.rs  error.rs  event.rs  hook.rs  keycode.rs  lib.rs  recorder.rs  state.rs  statistics.rs
src/platform/: mod.rs
src/platform/linux/: keycodes.rs  mod.rs
src/platform/linux/evdev/: display.rs  listen.rs  mod.rs  simulate.rs
src/platform/linux/x11/: display.rs  listen.rs  mod.rs  simulate.rs
src/platform/macos/: display.rs  keycodes.rs  listen.rs  mod.rs  simulate.rs
src/platform/windows/: display.rs  keycodes.rs  listen.rs  mod.rs  simulate.rs
