[package]
name = "monio"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Pure Rust cross-platform input monitoring library with proper drag detection"
repository = "https://github.com/HuakunShen/monio"
keywords = ["input", "hook", "keyboard", "mouse", "cross-platform"]
categories = ["api-bindings", "os"]

[dependencies]
thiserror = "2"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
ratatui = "0.30"
crossterm = "0.28"
ctrlc = "3.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-core-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xrecord", "xtst"], optional = true }
evdev = { version = "0.12", optional = true }

[features]
default = ["x11"]
x11 = ["dep:x11"]
evdev = ["dep:evdev"]
tokio = ["dep:tokio"]
recorder = ["dep:serde", "dep:serde_json"]
statistics = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "drag_detection"
path = "examples/drag_detection.rs"

[[example]]
name = "simulate"
path = "examples/simulate.rs"

[[example]]
name = "tui_key_displayer"
path = "examples/tui_key_displayer.rs"

[[example]]
name = "display"
path = "examples/display.rs"

[[example]]
name = "grab"
path = "examples/grab.rs"

[[example]]
name = "channel_sync"
path = "examples/channel_sync.rs"

[[example]]
name = "channel_async"
path = "examples/channel_async.rs"
required-features = ["tokio"]

[[example]]
name = "recorder"
path = "examples/recorder.rs"
required-features = ["recorder"]

[[example]]
name = "statistics"
path = "examples/statistics.rs"
required-features = ["statistics"]
